--- a/scss/content/_news.scss
+++ b/scss/content/_news.scss
@@ -12,6 +12,7 @@
 
 .newsContainerBG{
     background:$light-offset;
+    background: linear-gradient(180deg, rgba(239,239,239,1) 0%, rgba(255,255,255,1) 12%);
     margin-top: $gutter * 2;
 }
 
